--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,9 @@
-FROM eclipse-temurin:17-jdk-alpine
+FROM maven:3.9.5-eclipse-temurin-17 as build
+COPY . /app
 WORKDIR /app
-COPY target/store-2.0.0.jar app.jar
-CMD ["java", "-jar", "app.jar"]
+RUN mvn clean package -DskipTests
+
+FROM eclipse-temurin:17-jdk-alpine
+COPY --from-build /app/target/store-2.0.0.jar app.jar
+ENTRYPOINT ["java", "-jar", "app.jar"]
+EXPOSE 8080
