--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /app
 RUN mvn clean package -DskipTests
 
 FROM eclipse-temurin:17-jdk-alpine
-COPY --from-build /app/target/store-2.0.0.jar app.jar
+COPY --from=build /app/target/store-2.0.0.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
 EXPOSE 8080
