--- a/backend/src/main/resources/application-prod.yaml
+++ b/backend/src/main/resources/application-prod.yaml
@@ -1,4 +1,7 @@
 spring:
   datasource:
     url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${VHxnrmXvOnXJWJaasrghXrcZCWYMMmIA}
+
 websiteUrl: https://mystore.com
